// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InputContainerComponent it should disable all child buttons when input is disabled 1`] = `
<div>
  <div
    class="v-input-container v-surface"
    v-input-container=""
  >
    <input
      class="v-input"
      disabled="disabled"
      id="test-id"
      v-input=""
      value=""
    />
    <button
      class="v-button"
      disabled="disabled"
      role="button"
      type="button"
      v-button=""
    />
    <button
      class="v-button"
      disabled="disabled"
      role="button"
      type="button"
      v-button=""
    />
    
  </div>
</div>
`;

exports[`InputContainerComponent it should disable all child buttons when input is readonly 1`] = `
<div>
  <div
    class="v-input-container v-surface"
    v-input-container=""
  >
    <input
      class="v-input"
      id="test-id"
      readonly="readonly"
      v-input=""
      value=""
    />
    <button
      class="v-button"
      disabled="disabled"
      role="button"
      type="button"
      v-button=""
    />
    <button
      class="v-button"
      disabled="disabled"
      role="button"
      type="button"
      v-button=""
    />
    
  </div>
</div>
`;

exports[`InputContainerComponent should not render v-input-control when select is a child and v-icon-visa-toggle is a child 1`] = `
<div>
  <div
    class="v-input-container v-surface"
    usecustomicon="true"
    v-input-container=""
  >
    <select
      class="v-input"
      id="default-select-field"
      v-select=""
    >
      <option
        hidden=""
      />
    </select>
    
  </div>
</div>
`;

exports[`InputContainerComponent should render v-input-control when select is a child and v-icon-visa-toggle is a child 1`] = `
<div>
  <div
    class="v-input-container v-surface"
    v-input-container=""
  >
    <select
      class="v-input"
      id="default-select-field"
      v-select=""
    >
      <option
        hidden=""
      />
    </select>
    <div
      class="v-input-control"
    >
      <svg
        v-icon-visa-chevron-down-tiny=""
      />
    </div>
    
  </div>
</div>
`;
